--- a/private_readme.org
+++ b/private_readme.org
@@ -8,3 +8,7 @@ GEMINI_API_KEY=$gemini_api_key pxa98 gemini-tts -vvv examples/Civ_Avoidance_ACT_
 #+begin_src zsh :eval never
 GEMINI_API_KEY=$gemini_api_key pxa98 reval-ec gemini-tts -vvv "$(p)" -o tmp/boundaries_"${$(p):t:r}"
 #+end_src
+
+#+begin_src zsh :eval never
+printz GEMINI_API_KEY=\$gemini_api_key pxa98 gemini-tts -vvv \""$(p)"\" -o \"tmp/boundaries_"${$(p):t:r}"\"
+#+end_src
